[package]
name        = "tokimo-pt-search"
version     = "0.1.0"
edition     = "2024"
rust-version = "1.94.0"
license     = "MIT OR Apache-2.0"
description = "PT site torrent search and user info scraping"
repository  = "https://github.com/tokimo-lab/tokimo-package-pt-search"

[lib]
name = "tokimo_pt_search"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "cookies", "form"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
scraper = "0.26"
regex = "1"
percent-encoding = "2"
url = "2"

[profile.release]
lto       = "thin"
opt-level = 3
strip     = "symbols"
