[package]
name = "tokimo-package-pt-search"
version = "0.1.0"
edition = "2024"
description = "PT site torrent search and user info scraping"


[lib]
name = "tokimo_package_pt_search"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.13", features = ["json", "rustls", "form"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
scraper = "0.26"
regex = "1"
percent-encoding = "2"
url = "2"
